# naughty-animals-sticker-api

./: Cargo.toml  README.md
src/: main.rs
src/controller/: image_controller.rs
src/controllers/: image_controller.rs
src/service/: image_service.rs
src/services/: image_service.rs
