[package]
name = "simple_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["macros"]}
clearscreen = "4.0.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
image = "0.25.9"
rand = "0.10.0"
